package com.atguigu.decorator;

public class DeCaf extends Coffee{
    public DeCaf() {
        setDes("无因咖啡");
        setPrice(1.0f);
    }
}
