package com.atguigu.decorator;

public class LongBlack extends Coffee {
    public LongBlack() {
        setDes("longblack");
        setPrice(5.0f);
    }
}
