@startuml

title __DECORATOR's Class Diagram__\n

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.Chocolate {
        + Chocolate()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.Coffee {
        + cost()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.CoffeeBar {
        {static} + main()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.DeCaf {
        + DeCaf()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.Decorator {
        + Decorator()
        + cost()
        + getDes()
    }
  }
  

  namespace com.atguigu.decorator {
    abstract class com.atguigu.decorator.Drink {
        + des : String
        - price : float
        {abstract} + cost()
        + getDes()
        + getPrice()
        + setDes()
        + setPrice()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.Espresso {
        + Espresso()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.LongBlack {
        + LongBlack()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.Milk {
        + Milk()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.ShortBlack {
        + ShortBlack()
    }
  }
  

  namespace com.atguigu.decorator {
    class com.atguigu.decorator.Soy {
        + Soy()
    }
  }
  

  com.atguigu.decorator.Chocolate -up-|> com.atguigu.decorator.Decorator
  com.atguigu.decorator.Coffee -up-|> com.atguigu.decorator.Drink
  com.atguigu.decorator.DeCaf -up-|> com.atguigu.decorator.Coffee
  com.atguigu.decorator.Decorator -up-|> com.atguigu.decorator.Drink
  com.atguigu.decorator.Decorator o-- com.atguigu.decorator.Drink : obj
  com.atguigu.decorator.Espresso -up-|> com.atguigu.decorator.Coffee
  com.atguigu.decorator.LongBlack -up-|> com.atguigu.decorator.Coffee
  com.atguigu.decorator.Milk -up-|> com.atguigu.decorator.Decorator
  com.atguigu.decorator.ShortBlack -up-|> com.atguigu.decorator.Coffee
  com.atguigu.decorator.Soy -up-|> com.atguigu.decorator.Decorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
